--- a/index.html
+++ b/index.html
@@ -2,113 +2,122 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>QuaggaJS Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Updated Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self'; 
-        script-src 'self' https://cdnjs.cloudflare.com blob:; 
-        worker-src 'self' blob:; 
-        style-src 'self' 'unsafe-inline';
-    ">
+    <title>QuaggaJS Minimal Test</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-        }
-        #scanner-container {
+        #video-container {
             position: relative;
-            display: inline-block;
-            width: 80%;
-            max-width: 800px;
-            margin: 0 auto;
-            border: 2px solid #ccc;
-            border-radius: 4px;
+            width: 100%;
+            max-width: 600px;
+            aspect-ratio: 4 / 3;
+            background-color: #000;
         }
         video {
             width: 100%;
-            height: auto;
-            background-color: #000;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
-        #result {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #333;
+        canvas#overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
         }
     </style>
 </head>
 <body>
-    <h1>QuaggaJS Camera Test</h1>
-    
-    <div id="scanner-container">
+    <div id="video-container">
         <video id="video" autoplay playsinline></video>
+        <canvas id="overlay"></canvas>
     </div>
-    
-    <p id="result">Initializing scanner...</p>
+    <button id="startButton">Start Scanner</button>
 
-    <!-- QuaggaJS via CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js" defer></script>
+    <!-- Include QuaggaJS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const resultElement = document.getElementById('result');
+        const startButton = document.getElementById('startButton');
+        const video = document.getElementById('video');
+        const overlay = document.getElementById('overlay');
+        const overlayCtx = overlay.getContext('2d');
 
-            // Check for Web Worker support
-            if (typeof Worker === 'undefined') {
-                alert('Web Workers are not supported in your browser.');
-                resultElement.textContent = 'Web Workers are not supported in your browser.';
-                return;
-            }
-
-            // Initialize QuaggaJS
+        startButton.addEventListener('click', () => {
             Quagga.init({
                 inputStream: {
                     type: "LiveStream",
-                    target: document.querySelector('#video'),
                     constraints: {
-                        width: { min: 640 },
-                        height: { min: 480 },
+                        width: { ideal: 640 },
+                        height: { ideal: 480 },
                         facingMode: "environment"
-                    }
+                    },
+                    target: video
                 },
                 decoder: {
-                    readers: ["ean_reader", "upc_reader"]
+                    readers: ["upc_reader", "upc_e_reader"]
                 },
                 locate: true,
-                numOfWorkers: navigator.hardwareConcurrency || 4,
-                frequency: 10,
+                debug: {
+                    showCanvas: true,
+                    showPatches: true,
+                    showFoundPatches: true,
+                    showSkeleton: true,
+                    showLabels: true,
+                    showPatchLabels: true,
+                    showRemainingPatchLabels: true,
+                    boxFromPatches: {
+                        showTransformed: true,
+                        showTransformedBox: true,
+                        showBB: true
+                    }
+                }
             }, function(err) {
                 if (err) {
                     console.error(err);
-                    alert('Error initializing scanner: ' + err);
-                    resultElement.textContent = `Error initializing scanner: ${err}`;
+                    alert('Error initializing QuaggaJS');
                     return;
                 }
                 Quagga.start();
-                console.log("QuaggaJS initialized and started.");
-                resultElement.textContent = 'Scanner initialized. Point the camera at a barcode.';
+                console.log('QuaggaJS started.');
             });
 
-            // Handle barcode detection
             Quagga.onDetected((data) => {
-                const code = data.codeResult.code;
-                console.log(`Barcode detected: ${code}`);
-                resultElement.textContent = `Barcode detected: ${code}`;
-                Quagga.stop(); // Stop scanning after detection
+                console.log('Barcode detected:', data.codeResult.code);
+                alert('Barcode detected: ' + data.codeResult.code);
+                Quagga.stop();
             });
 
-            // Handle errors
-            Quagga.onError((err) => {
-                console.error(err);
-                alert('QuaggaJS encountered an error: ' + err);
-                resultElement.textContent = `Error: ${err}`;
-            });
-
-            // Optional: Visual feedback on processing
             Quagga.onProcessed((result) => {
-                // You can add custom processing here if needed
+                overlayCtx.clearRect(0, 0, overlay.width, overlay.height);
+                if (result) {
+                    if (result.boxes) {
+                        result.boxes.filter(box => box !== result.box).forEach(box => {
+                            drawPath(box, 'rgba(0, 255, 0, 0.3)');
+                        });
+                    }
+
+                    if (result.box) {
+                        drawPath(result.box, '#00FF00');
+                    }
+
+                    if (result.codeResult && result.codeResult.code) {
+                        drawPath(result.line, '#FF0000');
+                    }
+                }
             });
         });
+
+        function drawPath(path, color) {
+            if (!path || path.length === 0) return;
+            overlayCtx.beginPath();
+            overlayCtx.moveTo(path[0].x, path[0].y);
+            path.forEach(point => {
+                overlayCtx.lineTo(point.x, point.y);
+            });
+            overlayCtx.lineWidth = 2;
+            overlayCtx.strokeStyle = color;
+            overlayCtx.stroke();
+        }
     </script>
 </body>
 </html>
