--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Minimal QuaggaJS Test</title>
+    <title>Minimal QuaggaJS Barcode Scanner</title>
     <style>
         /* Basic Styles for Video and Overlay */
         #video-container {
@@ -11,6 +11,7 @@
             max-width: 600px;
             aspect-ratio: 4 / 3;
             background-color: #000;
+            margin: 0 auto; /* Center the container */
         }
         video {
             width: 100%;
@@ -26,6 +27,13 @@
             height: 100%;
             pointer-events: none;
         }
+        #startButton {
+            display: block;
+            margin: 20px auto;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -35,7 +43,7 @@
     </div>
     <button id="startButton">Start Scanner</button>
 
-    <!-- Include QuaggaJS -->
+    <!-- Include QuaggaJS via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/quagga/0.12.1/quagga.min.js"></script>
     <script>
         // Elements
@@ -44,22 +52,21 @@
         const overlay = document.getElementById('overlay');
         const overlayCtx = overlay.getContext('2d');
 
-        // Start Scanner Function
+        // Function to start the scanner
         function startScanner() {
             Quagga.init({
                 inputStream: {
                     type: "LiveStream",
                     constraints: {
-                        width: { ideal: 640 },
-                        height: { ideal: 480 },
-                        facingMode: "environment" // Use rear camera
+                        facingMode: "environment" // Ensure rear camera is used
+                        // Removed width and height for flexibility
                     },
                     target: video // Target the video element directly
                 },
                 decoder: {
                     readers: ["upc_reader", "upc_e_reader"] // Specify barcode types
                 },
-                locate: true,
+                locate: true, // Try to locate the barcode in the image
                 debug: {
                     showCanvas: true, // Enable for debugging
                     showPatches: true, // Enable for debugging
@@ -76,22 +83,25 @@
                 }
             }, function(err) {
                 if (err) {
-                    console.error(err);
-                    alert('Error initializing QuaggaJS');
+                    console.error('QuaggaJS initialization error:', err);
+                    alert('Error initializing barcode scanner. Check the console for details.');
                     return;
                 }
                 Quagga.start();
                 console.log('QuaggaJS started.');
+                startButton.style.display = 'none'; // Hide the start button after starting
             });
 
             // Event Listener for Detected Barcodes
             Quagga.onDetected((data) => {
-                console.log('Barcode detected:', data.codeResult.code);
-                alert('Barcode detected: ' + data.codeResult.code);
-                Quagga.stop();
+                const code = data.codeResult.code;
+                console.log('Barcode detected:', code);
+                alert('Barcode detected: ' + code);
+                Quagga.stop(); // Stop scanning after detection
+                startButton.style.display = 'block'; // Show the start button again
             });
 
-            // Event Listener for Processed Frames
+            // Event Listener for Processed Frames (for debugging)
             Quagga.onProcessed((result) => {
                 overlayCtx.clearRect(0, 0, overlay.width, overlay.height);
                 if (result) {
@@ -109,10 +119,13 @@
                         drawPath(result.line, '#FF0000');
                     }
                 }
+
+                // Draw the rectangle guide
+                drawGuideRectangle();
             });
         }
 
-        // Function to Draw Paths on Canvas
+        // Function to draw paths on the canvas
         function drawPath(path, color) {
             if (!path || path.length === 0) return;
             overlayCtx.beginPath();
@@ -125,10 +138,25 @@
             overlayCtx.stroke();
         }
 
+        // Function to draw the rectangle guide
+        function drawGuideRectangle() {
+            const width = overlay.width;
+            const height = overlay.height;
+            const rectWidth = width * 0.6; // 60% of the video width
+            const rectHeight = height * 0.2; // 20% of the video height
+            const rectX = (width - rectWidth) / 2; // Center horizontally
+            const rectY = (height - rectHeight) / 2; // Center vertically
+
+            overlayCtx.beginPath();
+            overlayCtx.lineWidth = 4;
+            overlayCtx.strokeStyle = 'rgba(255, 0, 0, 0.7)'; // Red color
+            overlayCtx.rect(rectX, rectY, rectWidth, rectHeight);
+            overlayCtx.stroke();
+        }
+
         // Start Scanner on Button Click
         startButton.addEventListener('click', () => {
             startScanner();
-            startButton.style.display = 'none';
             console.log('Start Scanner button clicked.');
         });
     </script>
