--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>UPC Barcode Scanner</title>
     <style>
-        /* Container for video and overlay */
+        /* Container for video and overlay with 4:3 aspect ratio */
         #video-container {
             position: relative;
             width: 100%;
@@ -12,22 +12,6 @@
             aspect-ratio: 4 / 3;
             margin: 0 auto;
             background-color: #000;
-        }
-        /* Video element styling */
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            display: block;
-        }
-        /* Overlay canvas styling */
-        canvas#overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
         }
         /* Start Scanner button styling */
         #startButton {
@@ -37,12 +21,21 @@
             font-size: 16px;
             cursor: pointer;
         }
+        /* Overlay canvas styling */
+        #overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
     </style>
 </head>
 <body>
-    <!-- Container for video and overlay -->
+    <!-- Container where QuaggaJS will render the video -->
     <div id="video-container">
-        <video id="video" autoplay playsinline></video>
+        <div id="interactive"></div>
         <canvas id="overlay"></canvas>
     </div>
     <!-- Button to start the scanner -->
@@ -55,9 +48,39 @@
     <script>
         // Get references to DOM elements
         const startButton = document.getElementById('startButton');
-        const video = document.getElementById('video');
+        const interactive = document.getElementById('interactive');
         const overlay = document.getElementById('overlay');
         const overlayCtx = overlay.getContext('2d');
+
+        // Function to draw paths on the overlay canvas
+        function drawPath(path, color) {
+            if (!path || path.length === 0) return;
+            overlayCtx.beginPath();
+            overlayCtx.moveTo(path[0].x, path[0].y);
+            path.forEach(point => {
+                overlayCtx.lineTo(point.x, point.y);
+            });
+            overlayCtx.lineWidth = 2;
+            overlayCtx.strokeStyle = color;
+            overlayCtx.stroke();
+        }
+
+        // Function to draw the red rectangle guide
+        function drawGuideRectangle() {
+            const width = overlay.width;
+            const height = overlay.height;
+            const rectWidth = width * 0.6; // 60% of the video width
+            const rectHeight = height * 0.2; // 20% of the video height
+            const rectX = (width - rectWidth) / 2; // Center horizontally
+            const rectY = (height - rectHeight) / 2; // Center vertically
+
+            // Draw the red rectangle
+            overlayCtx.beginPath();
+            overlayCtx.lineWidth = 4;
+            overlayCtx.strokeStyle = 'rgba(255, 0, 0, 0.7)'; // Red color with opacity
+            overlayCtx.rect(rectX, rectY, rectWidth, rectHeight);
+            overlayCtx.stroke();
+        }
 
         // Function to start the barcode scanner
         function startScanner() {
@@ -67,7 +90,7 @@
                     constraints: {
                         facingMode: "environment" // Use rear camera
                     },
-                    target: video // Target the video element
+                    target: interactive // Target the interactive div
                 },
                 decoder: {
                     readers: ["upc_reader", "upc_e_reader"] // Specify barcode types
@@ -103,20 +126,20 @@
                 startButton.style.display = 'block'; // Show start button again
             });
 
-            // Event listener for processed frames (for overlay)
+            // Event listener for processed frames to draw overlays
             Quagga.onProcessed((result) => {
                 // Clear the overlay canvas
                 overlayCtx.clearRect(0, 0, overlay.width, overlay.height);
 
                 if (result) {
-                    // Draw all detected boxes
+                    // Draw all detected boxes except the main one
                     if (result.boxes) {
                         result.boxes.filter(box => box !== result.box).forEach(box => {
                             drawPath(box, 'rgba(0, 255, 0, 0.3)');
                         });
                     }
 
-                    // Draw the main box
+                    // Draw the main detected box
                     if (result.box) {
                         drawPath(result.box, '#00FF00');
                     }
@@ -132,48 +155,20 @@
             });
         }
 
-        // Function to draw paths on the overlay canvas
-        function drawPath(path, color) {
-            if (!path || path.length === 0) return;
-            overlayCtx.beginPath();
-            overlayCtx.moveTo(path[0].x, path[0].y);
-            path.forEach(point => {
-                overlayCtx.lineTo(point.x, point.y);
-            });
-            overlayCtx.lineWidth = 2;
-            overlayCtx.strokeStyle = color;
-            overlayCtx.stroke();
-        }
-
-        // Function to draw the red rectangle guide
-        function drawGuideRectangle() {
-            const width = overlay.width;
-            const height = overlay.height;
-            const rectWidth = width * 0.6; // 60% of the video width
-            const rectHeight = height * 0.2; // 20% of the video height
-            const rectX = (width - rectWidth) / 2; // Center horizontally
-            const rectY = (height - rectHeight) / 2; // Center vertically
-
-            // Draw the red rectangle
-            overlayCtx.beginPath();
-            overlayCtx.lineWidth = 4;
-            overlayCtx.strokeStyle = 'rgba(255, 0, 0, 0.7)'; // Red color with opacity
-            overlayCtx.rect(rectX, rectY, rectWidth, rectHeight);
-            overlayCtx.stroke();
-        }
-
-        // Adjust overlay canvas size to match video size
+        // Function to resize the overlay canvas to match the interactive div size
         function resizeOverlay() {
-            overlay.width = video.clientWidth;
-            overlay.height = video.clientHeight;
+            overlay.width = interactive.clientWidth;
+            overlay.height = interactive.clientHeight;
             drawGuideRectangle();
         }
 
         // Event listener for window resize to adjust overlay
         window.addEventListener('resize', resizeOverlay);
 
-        // Event listener for video metadata loaded to set overlay size
-        video.addEventListener('loadedmetadata', resizeOverlay);
+        // Event listener for interactive div loaded to set overlay size
+        window.addEventListener('load', () => {
+            resizeOverlay();
+        });
 
         // Start the scanner when the start button is clicked
         startButton.addEventListener('click', () => {
